Lockscreen Vibrate option 2 of 2
Change-Id: If612a11549f630d0aab3f53a08595055cb7072d8

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4990,5 +4990,9 @@
     <string name="hardware_keys_action_voice_search">Voice search</string>
     <string name="hardware_keys_action_in_app_search">In-app search</string>
 
+    <!-- Lock screen vibrate settings -->
+    <string name="lockscreen_vibrate_enabled_title">Vibrate</string>
+    <string name="lockscreen_vibrate_enabled_head">Vibrate when unlocking</string>
+
     <!-- **** EXTRA ADDITIONS END **** -->
 </resources>
