reorganize display settings
Change-Id: I8a0bb4eb2a32d79bdba6812eeebfd3980e007f05

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5012,5 +5012,8 @@
 
     <string name="developer_tools_and_info_title">Tools &amp; information</string>
 
+    <string name="display_category_rotation_options_title">Rotation options</string>
+    <string name="display_category_light_options_title">Light options</string>
+
     <!-- **** EXTRA ADDITIONS END **** -->
 </resources>
