--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4896,7 +4896,7 @@
     <string name="hex">Hex:</string>
     <string name="hex_hint">#FF000000</string>
     <string name="set">Set</string>
-    <string name="ics_color">!!!</string>
+    <string name="ics_color">Holo</string>
 
     <!-- Shortcut picker -->
     <string name="use_custom_app_title">Use custom application</string>
