custom carrier label and notification shade wallpaper settings
Change-Id: I645c98bb04eab666b7e39557b366751eadbb1036

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5015,5 +5015,16 @@
     <string name="display_category_rotation_options_title">Rotation options</string>
     <string name="display_category_light_options_title">Light options</string>
 
+    <!-- General UI -->
+    <string name="title_ui">General user interface</string>
+    <string name="notification_wallpaper_title">Choose notification background</string>
+    <string name="notification_wallpaper_summary">You can remove the wallpaper from the menu in this window</string>
+    <string name="notif_wallpaper_alpha_title">Notification background alpha</string>
+    <string name="alpha_dialog_title">Set alpha value</string>
+    <string name="custom_carrier_label_title">Custom carrier label</string>
+    <string name="custom_carrier_label_explain">Please enter a new label. Enter an empty label to revert to stock label.</string>
+    <string name="custom_carrier_label_notset">Custom label currently not set</string>
+    <string name="misc_short">Misc</string>
+
     <!-- **** EXTRA ADDITIONS END **** -->
 </resources>
