lock screen text color settings
Change-Id: I7c8c19c633ffd335abacb999078e8dd0a06a17c8

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5026,5 +5026,7 @@
     <string name="custom_carrier_label_notset">Custom label currently not set</string>
     <string name="misc_short">Misc</string>
 
+    <string name="lockscreen_text_color_title">Lockscreen text color</string>
+
     <!-- **** EXTRA ADDITIONS END **** -->
 </resources>
