add widgets alignment settings
Change-Id: I7b63cf59c660958947aad3f3d39b110225bd6c17

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4419,6 +4419,11 @@
     <string name="lockscreen_background_custom_image">Custom image</string>
     <string name="lockscreen_background_default_wallpaper">Default wallpaper</string>
 
+    <!-- Lock screen widgets -->
+    <string name="lockscreen_widgets_title">Widget alignment</string>
+    <string name="lockscreen_widgets_dialog_title">Widget alignment</string>
+    <string name="lockscreen_widgets_result_successful">Widgets aligned</string>
+
     <!-- Lock screen misc. settings -->
     <string name="lockscreen_battery_status_title">Battery status</string>
     <string name="lockscreen_battery_status_charging">Only when charging</string>
