update rom about

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5042,15 +5042,14 @@
     <string name="lockscreen_interface_options_title">Lockscreen interface</string>
 
     <!-- About -->
-    <string name="title_about">About ROM</string>
+    <string name="title_about">About CN(A)</string>
     <string name="devs">Developer</string>
-    <string name="cna">Codename Android</string>
-    <string name="cna_website_title">Codename Android Website</string>
+    <string name="cna_website_title">Codename(Android) Website</string>
     <string name="cna_website_summary">www.codenameandroid.com \n Find all latest Codename Android news here.</string>
-    <string name="cna_source_title">Codename Android Source</string>
-    <string name="cna_review_title">Codename Android Forum</string>
+    <string name="cna_source_title">Codename(Android) Source</string>
+    <string name="cna_review_title">Codename(Android) Forum</string>
     <string name="cna_review_summary">www.codenameandroid.com/forum \n Find all newest releases here.</string>
-    <string name="cna_source_summary">Codename Android is fully open source. You can always check out the latest source at github.com/CNA</string>
+    <string name="cna_source_summary">Codename(Android) is fully open source. You can always check out the latest source at github.com/CNA</string>
     <string name="about_cna">About Codename Android</string>
     <string name="about_cna_summary">@null</string>
     <string name="donate_cna">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=JN6B9PY4V2388</string>
