changed it to be slim relevant

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5085,20 +5085,17 @@
     <string name="lockscreen_interface_options_title">Lock screen interface</string>
 
     <!-- About -->
-    <string name="title_about">About CN(A)</string>
+    <string name="title_about">About Slim</string>
     <string name="devs">Developer</string>
     <string name="links">Official links</string>
     <string name="contributors">Contributors</string>
-    <string name="cna_website_title">Codename(Android) Website</string>
-    <string name="cna_source_title">Codename(Android) Source</string>
-    <string name="cna_review_title">Codename(Android) Forum</string>
-    <string name="cna_youtube_title">Codename(Android) YouTube</string>
-    <string name="cna_website_summary">www.codenameandroid.com\nFind all latest Codename Android news here</string>
-    <string name="cna_review_summary">www.codenameandroid.com/forum\nFind all newest releases here</string>
-    <string name="cna_source_summary">Codename(Android) is fully open source. You can always check out the latest source at github.com/CNA</string>
-    <string name="cna_youtube_summary">www.youtube.com/user/codenameanddroid\nSubscribe to our YouTube channel for official Codename Android videos</string>
-    <string name="about_cna">About Codename Android</string>
-    <string name="about_cna_summary">@null</string>
+    <string name="slim_website_title">Slim Website</string>
+    <string name="slim_source_title">Slim Source</string>
+    <string name="slim_website_summary">slimroms.net\nFind all latest Slim news here</string>
+    <string name="slim_source_summary">SlimRoms are fully open source. Source at github.com/SlimRoms</string>
+    <string name="about_cna">About Slim ROms</string>
+    <string name="about_slim_summary">@null</string>
+	<string name="donate_slim">http://forum.xda-developers.com/donatetome.php?u=4135991</string>
     <string name="donate_cna">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=JN6B9PY4V2388</string>
     <string name="donate_cyanogenmod">http://forum.cyanogenmod.com/donate</string>
     <string name="donate_aokp">http://aokp.co/</string>
