--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5096,6 +5096,9 @@
     <string name="custom_carrier_label_title">Custom carrier label</string>
     <string name="custom_carrier_label_explain">Please enter a new label. Enter an empty label to revert to stock label.</string>
     <string name="custom_carrier_label_notset">Custom label currently not set</string>
+	<string name="recent_kill_all">Enable kill-all-button</string>
+    <string name="recent_kill_all_summary">Displays a button to kill all apps on recents window</string>
+
     <string name="misc_short">Misc</string>
 
     <string name="lockscreen_style_options_title">Lock screen style</string>
