--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4368,6 +4368,11 @@
     <string name="status_bar_signal_text_show_text">Text</string>
     <string name="status_bar_signal_text_hidden">Hidden</string>
     <string name="brightness_location_title">Brightness location</string>
+    <string name="status_bar_style_icon">Icon (default)</string> <!-- TODO: dedup -->
+    <string name="status_bar_battery_status_percentage">Percentage</string>
+    <string name="status_bar_battery_status_circle">Circle</string>
+    <string name="status_bar_battery_status_circle_percentage">Circle with percentage</string>
+    <string name="status_bar_style_hidden">Hidden</string> <!-- TODO: dedup -->
 
     <string name="lock_screen_title">Lock screen</string>
 
