--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5106,6 +5106,8 @@
     <string name="custom_carrier_label_notset">Custom label currently not set</string>
 	<string name="recent_kill_all">Enable kill-all-button</string>
     <string name="recent_kill_all_summary">Displays a button to kill all apps on recents window</string>
+    <string name="multipane_ui">Enable Dual panel</string>
+    <string name="multipane_ui_summary">This will Enable/Disable Dual panel view (requires reboot)</string>
 
     <string name="misc_short">Misc</string>
 
