--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5108,6 +5108,8 @@
     <string name="recent_kill_all_summary">Displays a button to kill all apps on recents window</string>
     <string name="multipane_ui">Enable Dual panel</string>
     <string name="multipane_ui_summary">This will Enable/Disable Dual panel view (requires reboot)</string>
+    <string name="tablet_ui">Force Tablet UI</string>
+    <string name="tablet_ui_summary">This will switch to Tablet UI (requires reboot)</string>
 
     <string name="misc_short">Misc</string>
 
