--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5007,6 +5007,11 @@
     <string name="interface_navbar_color_title">Navigation bar color</string>
     <string name="interface_navbar_color_summary">Change the color of the navigation bar</string>
     
+    <string name="navbar_ring_cat">Navigation Bar Ring Targets</string>
+    <string name="interface_navring">Ring Targets</string>
+    <string name="interface_navring_custom_pref_summary">Release on target to launch </string>
+    <string name="interface_navring_pref_default_summary">Tap to select a custom ring target activity</string>
+    <string name="interface_navring_assist_title">Google Now</string>
     <string name="interface_softkey_settings">Softkey Settings</string>
     <string name="interface_softkeys_pref_default_title">No Activity Selected</string>
     <string name="interface_softkeys_pref_default_summary">Tap to select a custom long press activity</string>
@@ -5014,17 +5019,16 @@
     <string name="interface_softkeys_reboot_title">Reboot Menu</string>
     <string name="interface_softkeys_screenshot_title">Screenshot</string>
     <string name="interface_softkeys_screenoff_title">Screen Off</string>
+    <string name="interface_softkeys_ime_switcher_title">Open IME Switcher</string>
+    <string name="interface_softkeys_ring_vib_title">Toggle Ring/Vib</string>
+    <string name="interface_softkeys_ring_silent_title">Toggle Ring/Silent</string>
+    <string name="interface_softkeys_ring_vib_silent_title">Toggle Ring/Vib/Silent</string>
     <string name="interface_softkeys_kill_process_title">Kill App</string>
     <string name="interface_softkey_package_removed">The previously selected package was not found</string>
-    
-    <string name="interface_navring_settings">Navigation bar ring</string>
-    <string name="interface_navring_custom_pref_summary">Release on target to launch </string>
-    <string name="interface_navring_pref_default_summary">Tap to select a custom ring target activity</string>
-    <string name="interface_navring_1">Ring Target 1</string>
-    <string name="interface_navring_2">Ring Target 2</string>
-    <string name="interface_navring_3">Ring Target 3</string>
-    <string name="interface_navring_assist_title">Google Now</string>
-    <string name="interface_navring">Ring Targets</string>
+    <string name="title_navring_amount">Number of navigation ring targets</string>
+    <string name="summary_navring_amount">Choose the number of ring targets</string>
+    <string name="interface_navring_settings_title">Navigation bar ring</string>
+    <string name="interface_navring_settings_summary">Edit your custom nav ring apps</string>
 
     <!-- Menu Strings -->
     <string name="menu_nav_bar_reset">Reset nav bar</string>
