Lockscreen center issues and new stuff 2/2
Settings part

- fix lockscreen clock aligment
- fix on security screen clock jumped
- rearanged settings part
- split target and aligment settings
- ability for left, right, center aligment

Change-Id: I79ef15bbd697c9b66b5cf954a17111c8b3a21331

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4454,9 +4454,13 @@
     <string name="lockscreen_background_default_wallpaper">Default wallpaper</string>
 
     <!-- Lock screen widgets -->
-    <string name="lockscreen_widgets_title">Targets/Widgets alignment</string>
-    <string name="lockscreen_widgets_dialog_title">Targets/Widgets alignment</string>
-    <string name="lockscreen_widgets_summary">Lock screen targets and widgets alignment</string>
+    <string name="lockscreen_widgets_title">Number of lockscreen targets</string>
+    <string name="lockscreen_widgets_dialog_title">Number of lockscreen targets</string>
+    <string name="lockscreen_widgets_summary">Choose number of lockscreen targets</string>
+    <string name="lockscreen_clock_align_title">Clock alignment</string>
+    <string name="lockscreen_clock_align_left">Left</string>
+    <string name="lockscreen_clock_align_center">Center</string>
+    <string name="lockscreen_clock_align_right">Right</string>
 
     <!-- Lock screen misc. settings -->
     <string name="lockscreen_battery_status_title">Battery status</string>
